--- a/index.html
+++ b/index.html
@@ -196,12 +196,9 @@ function toggleMode(){ document.body.classList.toggle("dark"); }
 <div id="guncel"></div>
 <p style="font-style:italic;color:gray;">Site şu anda geliştirme aşamasında. En yakın sürede ödevler eklenecektir.</p>
 
-<h2>⏰ Süresi Geçmiş Ödevler</h2>
-<div id="gecmis"></div>
-
 <hr>
 
-<h2>🧑‍🎓 Ödev Bildir</h2>
+<h2>🧑‍🎓 Eksik ve ya Yanlış Ödev Bildir</h2>
 <div class="card">
 <input id="ders" placeholder="Ders adı">
 <input id="tarih" type="date">
@@ -210,7 +207,7 @@ function toggleMode(){ document.body.classList.toggle("dark"); }
 <p id="mesaj"></p>
 </div>
 
-<h2>🔐 Yönetici</h2>
+<h2>🔐 Yönetici Girişi</h2>
 <div class="card">
 <input id="sifre" type="password" placeholder="Şifre">
 <button id="adminBtn">Giriş</button>
@@ -227,3 +224,4 @@ Made by Emirhan
 </div>
 </body>
 </html>
+
