--- a/index.html
+++ b/index.html
@@ -7,91 +7,54 @@
 
 <style>
 :root{
-  --bg:#f4f6f8;
-  --card:#fff;
-  --text:#000;
-  --btn:#4a6cf7;
-  --btn-hover:#6b82f7;
+  --bg:#f0f4f8; --text:#111; --card-bg:rgba(255,255,255,0.75);
+  --btn:#4a6cf7; --btn-hover:#6b82f7;
 }
 .dark{
-  --bg:#121212;
-  --card:#1e1e1e;
-  --text:#fff;
-  --btn:#6b82f7;
-  --btn-hover:#4a6cf7;
+  --bg:#121212; --text:#eee; --card-bg:rgba(30,30,30,0.85);
+  --btn:#6b82f7; --btn-hover:#4a6cf7;
 }
 body{
-  margin:0;
-  font-family:Arial;
-  background:var(--bg);
-  color:var(--text);
+  margin:0; font-family: 'Segoe UI', sans-serif;
+  background:var(--bg); color:var(--text);
   transition: background 0.3s, color 0.3s;
 }
 header{
-  background:var(--btn);
-  color:#fff;
-  padding:20px;
-  text-align:center;
+  background:var(--btn); color:#fff; padding:20px; text-align:center;
+  border-bottom-left-radius:15px; border-bottom-right-radius:15px;
 }
-.container{
-  max-width:900px;
-  margin:auto;
-  padding:12px;
-}
-h2{
-  border-left:6px solid var(--btn);
-  padding-left:10px;
-}
+.container{max-width:900px;margin:auto;padding:12px;}
+h2{margin-top:30px;border-left:6px solid var(--btn);padding-left:10px;}
 .card{
-  background:var(--card);
-  padding:15px;
-  margin:10px 0;
-  border-radius:10px;
-  box-shadow:0 4px 8px rgba(0,0,0,.1);
-  transition: transform 0.2s, box-shadow 0.2s;
-}
-.card:hover{
-  transform: translateY(-4px);
+  background:var(--card-bg); backdrop-filter: blur(8px);
+  padding:15px; margin:10px 0; border-radius:15px;
   box-shadow:0 8px 16px rgba(0,0,0,.2);
+  transition: transform 0.3s, box-shadow 0.3s, opacity 0.5s;
+  opacity:0; animation:fadeIn 0.8s forwards;
 }
-input,textarea,button{
-  width:100%;
-  padding:12px;
-  margin:6px 0;
-  border-radius:8px;
-  border:1px solid #ccc;
-  font-size:16px;
-}
-button{
-  background:var(--btn);
-  color:white;
-  border:none;
-  cursor:pointer;
-  transition: background 0.2s;
-}
+@keyframes fadeIn{to{opacity:1;}}
+.card:hover{transform: translateY(-5px); box-shadow:0 12px 24px rgba(0,0,0,.3);}
+input,textarea,button{width:100%;padding:12px;margin:6px 0;border-radius:8px;border:1px solid #ccc;font-size:16px;}
+button{background:var(--btn);color:white;border:none;cursor:pointer;transition: background 0.2s;}
 button:hover{background:var(--btn-hover);}
-.toggle{
-  position:fixed;top:15px;right:15px;
-  padding:8px 12px;border-radius:20px;
-  z-index:10;
-}
+.toggle{position:fixed;top:15px;right:15px;padding:8px 12px;border-radius:20px;z-index:10;}
 .hidden{display:none;}
-footer{
-  text-align:center;
-  margin:20px 0;
-  font-size:14px;
-  color:gray;
+.tag{display:inline-block;padding:3px 8px;margin-right:6px;border-radius:8px;font-size:12px;color:white;transition:transform 0.3s;}
+.tag:hover{transform:scale(1.1);}
+footer{text-align:center;margin:20px 0;font-size:14px;color:gray;}
+#popup{
+  position:fixed;top:20px;right:20px;padding:12px 20px;background:var(--btn);
+  color:#fff;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,.3);
+  opacity:0; transform:translateY(-20px); transition:opacity 0.3s, transform 0.3s; z-index:999;
 }
-@media(max-width:600px){
-  header h1{font-size:22px;}
-}
+#popup.show{opacity:1; transform:translateY(0);}
+@media(max-width:600px){header h1{font-size:22px;}}
 </style>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getFirestore, collection, addDoc, doc, deleteDoc, onSnapshot, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { getFirestore, collection, addDoc, doc, deleteDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyDBq4UtwuZu7-deFWxnNTsyS_j4HczNIrE",
   authDomain: "site-fa74f.firebaseapp.com",
@@ -101,89 +64,87 @@ const firebaseConfig = {
   appId: "1:835631171424:web:08a16d3cbb583399ad0005",
   measurementId: "G-KLTLZ5DBR4"
 };
-
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-
 const ADMIN="1234";
 
-// Elementler
-const guncelDiv = document.getElementById("guncel");
-const gecmisDiv = document.getElementById("gecmis");
-const bekleyenDiv = document.getElementById("bekleyen");
-const ders = document.getElementById("ders");
-const tarih = document.getElementById("tarih");
-const aciklama = document.getElementById("aciklama");
-const mesaj = document.getElementById("mesaj");
-const adminDiv = document.getElementById("admin");
-const adminBtn = document.getElementById("adminBtn");
-const gonderBtn = document.getElementById("gonderBtn");
+// Elements
+const guncelDiv=document.getElementById("guncel");
+const gecmisDiv=document.getElementById("gecmis");
+const bekleyenDiv=document.getElementById("bekleyen");
+const ders=document.getElementById("ders");
+const tarih=document.getElementById("tarih");
+const aciklama=document.getElementById("aciklama");
+const mesaj=document.getElementById("mesaj");
+const adminDiv=document.getElementById("admin");
+const adminBtn=document.getElementById("adminBtn");
+const gonderBtn=document.getElementById("gonderBtn");
+const popup=document.getElementById("popup");
 
-// Öğrenci ödev bildirimi
-gonderBtn.addEventListener("click", async ()=>{
-    if(!ders.value || !tarih.value || !aciklama.value) return;
-    await addDoc(collection(db, "bekleyen"), {
-        ders: ders.value,
-        tarih: tarih.value,
-        aciklama: aciklama.value
-    });
-    ders.value=tarih.value=aciklama.value="";
-    mesaj.innerText="✅ Ödev onay sürecine alındı";
+// Popup fonksiyonu
+function showPopup(text){
+  popup.innerText=text;
+  popup.classList.add("show");
+  setTimeout(()=>popup.classList.remove("show"),2000);
+}
+
+// Ödev bildirimi
+gonderBtn.addEventListener("click",async ()=>{
+  if(!ders.value||!tarih.value||!aciklama.value) return;
+  await addDoc(collection(db,"bekleyen"),{ders:ders.value,tarih:tarih.value,aciklama:aciklama.value});
+  ders.value=tarih.value=aciklama.value="";
+  showPopup("✅ Ödev onay sürecine alındı");
 });
 
-// Admin girişi
-adminBtn.addEventListener("click", ()=>{
-    const sifre = document.getElementById("sifre").value;
-    if(sifre===ADMIN){
-        adminDiv.classList.remove("hidden");
-        adminPanel();
-    } else alert("❌ Şifre yanlış!");
+// Admin giriş
+adminBtn.addEventListener("click",()=>{
+  const sifre=document.getElementById("sifre").value;
+  if(sifre===ADMIN){adminDiv.classList.remove("hidden"); adminPanel();}
+  else showPopup("❌ Şifre yanlış!");
 });
 
 // Admin paneli ve onaylama
 function adminPanel(){
-    onSnapshot(collection(db, "bekleyen"), snap=>{
-        bekleyenDiv.innerHTML="";
-        snap.forEach(docSnap=>{
-            const o = docSnap.data();
-            const div = document.createElement("div");
-            div.className="card";
-            div.innerHTML=`
-                <strong>${o.ders}</strong>
-                <p>${o.aciklama}</p>
-                <small>${o.tarih}</small>
-                <button>Onayla</button>`;
-            const btn = div.querySelector("button");
-            btn.addEventListener("click", async ()=>{
-                await addDoc(collection(db, "odevler"), o);
-                await deleteDoc(doc(db,"bekleyen",docSnap.id));
-            });
-            bekleyenDiv.appendChild(div);
-        });
+  onSnapshot(collection(db,"bekleyen"),snap=>{
+    bekleyenDiv.innerHTML="";
+    snap.forEach(docSnap=>{
+      const o=docSnap.data();
+      const div=document.createElement("div");
+      div.className="card";
+      const tagColor=getColor(o.ders);
+      div.innerHTML=`<span class="tag" style="background:${tagColor}">${o.ders}</span>
+      <p>${o.aciklama}</p><small>${o.tarih}</small>
+      <button>Onayla</button>`;
+      div.querySelector("button").addEventListener("click",async ()=>{
+        await addDoc(collection(db,"odevler"),o);
+        await deleteDoc(doc(db,"bekleyen",docSnap.id));
+        showPopup("✅ Ödev onaylandı");
+      });
+      bekleyenDiv.appendChild(div);
     });
+  });
 }
 
-// Güncel ve geçmis ödevler
-onSnapshot(collection(db, "odevler"), snap=>{
-    guncelDiv.innerHTML="";
-    gecmisDiv.innerHTML="";
-    const today = new Date().toISOString().split("T")[0];
-    snap.forEach(docSnap=>{
-        const o = docSnap.data();
-        const div = document.createElement("div");
-        div.className="card";
-        div.innerHTML=`<strong>${o.ders}</strong><p>${o.aciklama}</p><small>${o.tarih}</small>`;
-        if(o.tarih<today) gecmisDiv.appendChild(div);
-        else guncelDiv.appendChild(div);
-    });
+// Güncel ve geçmiş ödevler
+onSnapshot(collection(db,"odevler"),snap=>{
+  guncelDiv.innerHTML=""; gecmisDiv.innerHTML="";
+  const today=new Date().toISOString().split("T")[0];
+  snap.forEach(docSnap=>{
+    const o=docSnap.data();
+    const div=document.createElement("div");
+    div.className="card";
+    const tagColor=getColor(o.ders);
+    div.innerHTML=`<span class="tag" style="background:${tagColor}">${o.ders}</span>
+    <p>${o.aciklama}</p><small>${o.tarih}</small>`;
+    if(o.tarih<today) gecmisDiv.appendChild(div);
+    else guncelDiv.appendChild(div);
+  });
 });
 
-// Karanlık mod
-function toggleMode(){ document.body.classList.toggle("dark"); }
-</script>
-</head>
-<body>
-<button class="toggle" onclick="toggleMode()">🌙</button>
+// Ders renkleri
+function getColor(ders){const colors={"Matematik":"#f54242","Fizik":"#f5a142","Kimya":"#f5e642","Biyoloji":"#42f554","Tarih":"#4287f5","Coğrafya":"#9b42f5"};return colors[ders]||"#4a6cf7";}
+
+
 
 <header>
 <h1>📚 10/C – Ödev Takip</h1>
@@ -191,20 +152,15 @@ function toggleMode(){ document.body.classList.toggle("dark"); }
 </header>
 
 <div class="container">
-
-<h2>✅ Güncel Ödevler</h2>
-<div id="guncel"></div>
+<h2>✅ Güncel Ödevler</h2><div id="guncel"></div>
 <p style="font-style:italic;color:gray;">Site şu anda geliştirme aşamasında. En yakın sürede ödevler eklenecektir.</p>
 
-<hr>
-
-<h2>🧑‍🎓 Eksik ve ya Yanlış Ödev Bildir</h2>
+<h2>🧑‍🎓 Eksik Ödevleri Bildir r</h2>
 <div class="card">
 <input id="ders" placeholder="Ders adı">
 <input id="tarih" type="date">
 <textarea id="aciklama" placeholder="Ödev açıklaması"></textarea>
 <button id="gonderBtn">Tamam</button>
-<p id="mesaj"></p>
 </div>
 
 <h2>🔐 Yönetici Girişi</h2>
@@ -218,10 +174,7 @@ function toggleMode(){ document.body.classList.toggle("dark"); }
 <div id="bekleyen"></div>
 </div>
 
-<footer>
-Made by Emirhan
-</footer>
+<footer>Made by Emirhan</footer>
 </div>
 </body>
 </html>
-
