--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@ onSnapshot(collection(db,"odevler"),snap=>{
 // Ders renkleri
 function getColor(ders){const colors={"Matematik":"#f54242","Fizik":"#f5a142","Kimya":"#f5e642","Biyoloji":"#42f554","Tarih":"#4287f5","Coğrafya":"#9b42f5"};return colors[ders]||"#4a6cf7";}
 
-
+// Karanlık mod
+function toggleMode(){document.body.classList.toggle("dark");}
+</script>
+</head>
+<body>
+<div id="popup"></div>
+<button class="toggle" onclick="toggleMode()">🌙</button>
 
 <header>
 <h1>📚 10/C – Ödev Takip</h1>
@@ -155,7 +161,8 @@ function getColor(ders){const colors={"Matematik":"#f54242","Fizik":"#f5a142","K
 <h2>✅ Güncel Ödevler</h2><div id="guncel"></div>
 <p style="font-style:italic;color:gray;">Site şu anda geliştirme aşamasında. En yakın sürede ödevler eklenecektir.</p>
 
-<h2>🧑‍🎓 Eksik Ödevleri Bildir r</h2>
+
+<h2>🧑‍🎓 Eksik Ödev Bildir</h2>
 <div class="card">
 <input id="ders" placeholder="Ders adı">
 <input id="tarih" type="date">
